--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.10",
+    "@types/pg": "^8.6.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   }
