--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.10",
     "@types/pg": "^8.6.4",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   }
